--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "SET NODE_ENV=dev && node server.js",
-    "test": "mocha --harmony"
+    "test": "mocha --harmony --timeout 10000"
   },
   "repository": {
     "type": "git",
