--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/HTeker/Project-WebApp-API#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mysql2": "^1.5.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.23.1"
   },
   "devDependencies": {
